--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <title>Переменные, типы и ветвления</title>
   </head>
   <body>
-    <!-- <script src="./js/01-vars.js" type="module"></script> -->
-    <!-- <script src="./js/02-input.js" type="module"></script> -->
-    <!-- <script src="./js/03-numbers.js" type="module"></script> -->
-    <!-- <script src="./js/04-strings.js" type="module"></script> -->
-    <!-- <script src="./js/05-comparison-operators.js" type="module"></script> -->
+    <script src="./js/js1/1vars.js" type="module"></script>
+    <script src="./js/js1/2input.js" type="module"></script>
+    <script src="./js/js1/3numbers.js" type="module"></script>
+    <script src="./js/js1/4strings.js" type="module"></script> -->
+    <script src="./js/js1/5comparison-operators.js" type="module"></script>
     <!-- <script src="./js/06-logical-operators.js" type="module"></script> -->
     <!-- <script src="./js/06-1-segment.js" type="module"></script> -->
     <!-- <script src="./js/06-2-chat.js" type="module"></script> -->
