--- a/index.html
+++ b/index.html
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Переменные, типы и ветвления</title>
-  </head>
-  <body>
-    <script src="./js/js1/1vars.js" type="module"></script>
-    <script src="./js/js1/2input.js" type="module"></script>
-    <script src="./js/js1/3numbers.js" type="module"></script>
-    <script src="./js/js1/4strings.js" type="module"></script> -->
-    <script src="./js/js1/5comparison-operators.js" type="module"></script>
-    <!-- <script src="./js/06-logical-operators.js" type="module"></script> -->
-    <!-- <script src="./js/06-1-segment.js" type="module"></script> -->
-    <!-- <script src="./js/06-2-chat.js" type="module"></script> -->
-    <!-- <script src="./js/06-3-subscription.js" type="module"></script> -->
-    <!-- <script src="./js/07-branching.js" type="module"></script> -->
-    <!-- <script src="./js/07-1-purchase.js" type="module"></script> -->
-    <!-- <script src="./js/07-2-discount.js" type="module"></script> -->
-  </body>
+
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>JS is easy, they told me</title>
+  <link rel="stylesheet" href="./static/style.css">
+</head>
+
+<body>
+  <h1 id="lesson-title">I am a template</h1>
+  <!--  -->
+  <!-- <script src="./static/lesson-03.js"></script> -->
+  <!--  <script src="./static/lesson-function.js"></script> -->
+ <!-- <script src="./static/lesson-objects.js"></script> -->
+  <!-- <script src="./static/lesson-callback.js"></script> -->
+  
+  <script src="./static/methods.js"></script>
+  
+</body>
+
 </html>
