--- a/index.html
+++ b/index.html
@@ -2,22 +2,37 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>JS is easy, they told me</title>
-  <link rel="stylesheet" href="./static/style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Прототипное наследование</title>
 </head>
 
 <body>
+  <div id="counter-1">
+    <button data-decrement>-</button>
+    <span data-value>0</span>
+    <button data-increment>+</button>
+  </div>
+
+  <div id="counter-2">
+    <button data-decrement>Уменьшить</button>
+    <span data-value>0</span>
+    <button data-increment>Увеличить</button>
+  </div>
+
+
   <h1 id="lesson-title">I am a template</h1>
   <!--  -->
   <!-- <script src="./static/lesson-03.js"></script> -->
   <!--  <script src="./static/lesson-function.js"></script> -->
- <!-- <script src="./static/lesson-objects.js"></script> -->
+  <!-- <script src="./static/lesson-objects.js"></script> -->
   <!-- <script src="./static/lesson-callback.js"></script> -->
+  <!-- <script src="./static/methods.js"></script> -->
+  <!-- <script src="./static/this.js"></script> -->
   
-  <script src="./static/methods.js"></script>
+  <script src="./static/prototype.js" type="module"></script>
+  <script src="./static/constructor.js" type="module"></script>
+  <script src="./static/counter.js" type="module"></script>
   
 </body>
 
