--- a/index.html
+++ b/index.html
@@ -29,10 +29,11 @@
   <!-- <script src="./static/lesson-callback.js"></script> -->
   <!-- <script src="./static/methods.js"></script> -->
   <!-- <script src="./static/this.js"></script> -->
+  <!-- <script src="./static/prototype.js" type="module"></script> -->
+  <!--  <script src="./static/counter.js" type="module"></script> -->
   
-  <script src="./static/prototype.js" type="module"></script>
   <script src="./static/constructor.js" type="module"></script>
-  <script src="./static/counter.js" type="module"></script>
+ 
   
 </body>
 
